# QMapControl

./: .gitignore  CMakeLists.txt  Conan.md  QMapControl.pro  README.md  conanfile.py
QMapControl/: QMapControl.pri  QMapControl.pro
QMapControl/Samples/: CMakeLists.txt
QMapControl/Samples/Citymap/: CMakeLists.txt
QMapControl/Samples/GPS/: CMakeLists.txt
QMapControl/Samples/Mapviewer/src/: mapviewer.cpp
QMapControl/Samples/Multidemo/: CMakeLists.txt
QMapControl/Samples/Navigator/: CMakeLists.txt  Navigator.cpp  Navigator.h  Navigator.qrc
QMapControl/Samples/ShapeFilesViewer/: CMakeLists.txt  ShapeFilesViewer.cpp  ShapeFilesViewer.h
QMapControl/src/QMapControl/: AdapterRaster.cpp  AdapterRaster.h  ESRIShapefile.cpp  ESRIShapefile.h  Geometry.cpp  Geometry.h  GeometryLineString.cpp  GeometryLineString.h  GeometryPoint.cpp  GeometryPoint.h  GeometryPointArrow.cpp  GeometryPointArrow.h  GeometryPointCircle.cpp  GeometryPointCircle.h  GeometryPointImage.cpp  GeometryPointImage.h  GeometryPointImageScaled.cpp  GeometryPointImageScaled.h  GeometryPointShape.cpp  GeometryPointShape.h  GeometryPointShapeScaled.cpp  GeometryPointShapeScaled.h  GeometryPolygon.cpp  GeometryPolygon.h  GeometryPolygonImage.cpp  GeometryPolygonImage.h  GeometryWidget.cpp  GeometryWidget.h  ImageManager.cpp  ImageManager.h  Layer.cpp  Layer.h  LayerESRIShapefile.cpp  LayerESRIShapefile.h  LayerGeometry.cpp  LayerGeometry.h  LayerMapAdapter.cpp  LayerMapAdapter.h  LayerRaster.cpp  LayerRaster.h  (+30 more)
QMapControl/src/QMapControl/pal/: PalGeometry.cpp  PalGeometry.h
QMapControl/src/QMapControl/utils/: RasterUtils.cpp  RasterUtils.h
cmake/: FindLibPal.cmake  install.cmake
